<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/dish"
            android:id="@+id/dish_list"
            android:title="@string/dish_list"/>
        <item
            android:id="@+id/table_list"
            android:title="@string/table_list" />
        <item
            android:id="@+id/type_of_dish_list"
            android:title="@string/type_of_dish_list" />
    </group>
    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/sign_up"
                android:title="@string/sign_up" />
            <item
                android:id="@+id/sign_in"
                android:title="@string/sign_in" />
        </menu>
    </item>
</menu>