<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin.orderfood.DishActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtNameOfDish"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/name_of_dish" />

            <ImageView
                android:id="@+id/image_add_dish"
                android:src="@drawable/dish_plus"
                android:layout_width="@dimen/radius"
                android:layout_height="@dimen/radius" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_weight="1"
                android:hint="@string/cost_of_dish"
                android:id="@+id/edtCostOfDish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:text="@string/vnd"
                android:layout_width="@dimen/radius"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAccept"
                android:layout_weight="1"
                android:text="@string/accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
